# Game-Engine

./: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/core/: engine.cpp
src/graphics/: graphics.cpp  graphics.h
src/graphics/rendering/: batchRenderer.cpp  batchRenderer.h  drawable.h  renderTarget.h
src/graphics/shapes/: rect.cpp  rect.h
src/graphics/window/: window.cpp  window.h
src/math/: cfmath.cpp  cfmath.h
src/shader/: shader.cpp  shader.h
